[tool.poetry]
name = "sakusaku-diary-friend"
version = "0.1.0"
description = ""
authors = ["tkt-tmp <121843500+tkt-tmp@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sakusaku_diary_friend"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "^1.13.3"
line-bot-sdk = "^2.4.2"
openai = "^0.27.4"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.21.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
